--- a/README
+++ b/README
@@ -7,4 +7,4 @@ vulnerabilities for messages containing user-supplied data.
 
 Author: Paweł Stradomski <pstradomski@codesprinters.com>
 
-(C) Codesprinters, 2008. Released under MIT licence.
+(C) 2008 Code Sprinters, <http://www.codesprinters.com>. Released under MIT licence.
